--- a/mascota_nueva.html
+++ b/mascota_nueva.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="..//proyecto/css/style_tp2.css">
+    <link rel="stylesheet" href="css/style_tp2.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&family=Pacifico&display=swap" rel="stylesheet">
