--- a/mascota_editar.html
+++ b/mascota_editar.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="..//proyecto/css/style_tp2.css">
+    <link rel="stylesheet" href="css/style_tp2.css" />
 </head>
 <body>
     <header id="header">
