--- a/mascota_nueva.html
+++ b/mascota_nueva.html
@@ -88,8 +88,8 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
     crossorigin="anonymous">
     </script>
-    <script src="./js/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="./js/mascotas.js"></script>
+    <script src="js/mascotas.js"></script>
 </body>
 </html>
