--- a/mascotas.html
+++ b/mascotas.html
@@ -113,7 +113,7 @@ crossorigin="anonymous"></script>
 integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
 crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-    <script src="js/vue.global.js"></script><!--Link de VUE-->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><!--Link de VUE-->
     <script src="js/mascotas.js"></script>
 </body>
 </html>
