--- a/mascota_editar.html
+++ b/mascota_editar.html
@@ -24,7 +24,7 @@
             <div class="form-regmod" >
                 <form style="background-color: aliceblue;margin:10px auto ; padding: 20px;">
                     <h1>Editar datos mascota</h1>
-                    <h1>Especie seleccionada : {{id_especie}}</h1>
+                    <p2>Especie seleccionada : {{id_especie}}</p2>
                     <div class="mb-3-m">
                         <label for="id">Id</label>
                         <input type="number" name="id" id="id" disabled v-model="id" >
