--- a/mascota_editar.html
+++ b/mascota_editar.html
@@ -20,39 +20,41 @@
     <!-- place navbar here -->
     </header>
     <main>
-        <div class="container-m" id="app">
-            <div class="form-regmod" >
-                <form style="background-color: aliceblue;margin:10px auto ; padding: 20px;">
-                    <h1>Editar datos mascota</h1>
-                    <p2>Especie seleccionada : {{id_especie}}</p2>
-                    <div class="mb-3-m">
-                        <label for="id">Id</label>
-                        <input type="number" name="id" id="id" disabled v-model="id" >
-                    </div>
-                    <div class="mb-3-m">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" name="nombre" id="nombre" v-model="nombre">
-                    </div>
-                    <div class="mb-3-m">
-                        <label for="id_especie">Especie</label>
-                        <input type="text" name="id_especie" id="id_especie" v-model="id_especie">
-                    </div>
-                    <div class="mb-3-m">
-                        <label for="peso">Peso Kg</label>
-                        <input type="number" min="0"  name="peso" id="peso" v-model="peso">
-                    </div>
-                    <div class="mb-3-m">
-                        <label for="imagen">Imagen</label>
-                        <input type="text" name="imagen" id="imagen" v-model="imagen">
-                        <div class="cont-imagenpeque">
-                            <img width="100" :src="imagen" alt="" >
+        <div class="cont-editar">  
+            <div class="container-m" id="app">
+                <div class="form-regmod" >
+                    <form style="background-color: aliceblue;margin:10px auto ; padding: 20px;">
+                        <h1>Editar datos mascota</h1>
+                        <h1>Especie seleccionada : {{id_especie}}</h1>
+                        <div class="mb-3-m">
+                            <label for="id">Id</label>
+                            <input type="number" name="id" id="id" disabled v-model="id" >
                         </div>
-                    </div>
-                        <button type="button" class="btn btn-success" v-on:click="modificar()">Modificar</button>
-                        <button type="button" class="btn-backtotable" onclick="location.href='mascotas.html'" >Volver</button>
-                </form>
+                        <div class="mb-3-m">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" name="nombre" id="nombre" v-model="nombre">
+                        </div>
+                        <div class="mb-3-m">
+                            <label for="id_especie">Especie</label>
+                            <input type="text" name="id_especie" id="id_especie" v-model="id_especie">
+                        </div>
+                        <div class="mb-3-m">
+                            <label for="peso">Peso Kg</label>
+                            <input type="number" min="0"  name="peso" id="peso" v-model="peso">
+                        </div>
+                        <div class="mb-3-m">
+                            <label for="imagen">Imagen</label>
+                            <input type="text" name="imagen" id="imagen" v-model="imagen">
+                            <div class="cont-imagenpeque">
+                                <img width="100" :src="imagen" alt="" >
+                            </div>
+                        </div>
+                            <button type="button" class="btn btn-success" v-on:click="modificar()">Modificar</button>
+                            <button type="button" class="btn-backtotable" onclick="location.href='mascotas.html'" >Volver</button>
+                    </form>
+                </div>
             </div>
-        </div>
+        </div> 
     </main>
     <footer>
         <!-- place footer here -->
