--- a/mascota_editar.html
+++ b/mascota_editar.html
@@ -92,4 +92,4 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="js/mascota_editar.js"></script>
 </body>
-</html
+</html>
