--- a/mascota_nueva.html
+++ b/mascota_nueva.html
@@ -33,7 +33,7 @@
                         <input type="text" name="id_especie" id="id_especie" v-model="id_especie" placeholder="Escriba especie/tipo">
                     </div>
                     <div class="mb-3-m">
-                        <label for="peso">Peso</label>
+                        <label for="peso">Peso (Kg)</label>
                         <input type="number" min="0" name="peso" id="peso" v-model="peso" placeholder="Escriba el peso">
                     </div>
                     <div class="mb-3-m">
